# changes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.changes/: lacking-grass.md  staking-goose.md
.github/workflows/: ci.yml  main.yml  tests.yml
src/: add.rs  app.rs  args.rs  change.rs  cli.rs  cmds.rs  cmds.rs_  command.rs  config.rs  error.rs  lib.rs  main.rs  release.rs  template.rs  ui.rs  util.rs
src/command/: add.rs
src/subcommand/: add.rs  generate.rs  mod.rs
