[package]
name = "changes"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0.5", features = ["derive", "env", "wrap_help"] }
color-eyre = "0.6"
dialoguer = "0.10.0"
dirs-next = "2.0.0"
edit = "0.1.2"

names = { version = "0.14.0", default-features = false }
serde = "1.0"
serde-frontmatter = "0.1.0"
serde-semver = "0.2.1"
semver = "1.0.4"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
thiserror = "1.0.30"
tera = "1.15.0"

[dependencies.config]
version = "0.12.0"
default-features = false
features = ["toml", "yaml"]

[dependencies.rust-embed]
version = "6.3.0"
features = ["debug-embed"]
