[package]
name = "changes"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1", features = ["derive", "env", "wrap_help"] }
color-eyre = "0.6"
dialoguer = "0.11"
dirs-next = "2.0"
edit = "0.1"
names = { version = "0.14", default-features = false }
serde = "1.0"
serde-frontmatter = "0.1"
serde-semver = "0.2"
semver = "1.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
thiserror = "1.0"
tera = "1.15"

[dependencies.config]
version = "0.14"
default-features = false
features = ["toml", "yaml"]

[dependencies.rust-embed]
version = "8.5"
features = ["debug-embed"]
